updated website version 2.0

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,72 +1,129 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@article{ashikuzzaman2016hgi2,
+  abbr={Int. J. Mod.},
+  title={HgI2 as x-ray imager- Modulation transfer function approach},
+  author={Ashikuzzaman, Md and Ali, Jisan and Adib, R and Hossain, MM and Mahmood, SAV},
+  journal={International Journal of Modern Research Engineering Technology},
+  volume={1},
+  number={2},
+  pages={1--4},
+  year={2016},
+  abstract={The  Modulation  Transfer  Function  (MTF)  of  Polycrystalline Mercuric Iodide  based flat  panel x-ray  detectors    is  simulated  as  a  function  of  spatial  frequency.  A  simplified  mathematical  model  for  MTF  is applied on four different published prototypes of Polycrystalline Mercuric Iodide. Our aim was to fit curve from MTF  model  with  the  curve  from  experimental  data.  The  result  of  simulation  from  theoretical  model  shows  a good agreement with the measured data. We have found that deep-trapping,K-fluorescence,dependence of dark current on temperature and exposure time are the most possible reasons for the slight mismatches between two curves. In addition, the  mobility-lifetime product for best curve fitting was also examined for each prototype.}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@inproceedings{ahsan2018culturally,
+  abbr={COMPSAC},
+  title={A Culturally Tailored Intervention System for Cancer Survivors to Motivate Physical Activity},
+  author={Ahsan, Golam Mushih Tanimul and Tumpa, Jannatul Ferdause and Adib, Riddhiman and Ahamed, Sheikh Iqbal and Petereit, Daniel and Burhansstipanov, Linda and Krebs, Linda U and Dignan, Mark},
+  booktitle={2018 IEEE 42nd Annual Computer Software and Applications Conference (COMPSAC)},
+  pages={875--880},
+  year={2018},
+  organization={IEEE},
+  abstract={It is necessary for a cancer survivor to have good health behavior. Essential exercise and proper diet are helpful to decrease the risk of recurrence of the disease and the development of a new cancer type. People from low socioeconomic status are more likely to participate in risky health behaviors and have a higher chance of recurrence of cancer. It is important to have a motivational system for cancer survivors that motivates them to perform regular physical activities. In this article, we discuss the development of an mHealth system, which aims to increase physical activity in Native American populations with culturally appropriate motivational text and video messages. The system also includes an e-journal to monitor and maintain proper healthcare. We will also analyze the pilot data to evaluate the usability and the effectiveness of the system.}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
+@inproceedings{hasan2018smarthelp,
+  abbr={AMIA},
+  title={Smarthelp: Smartphone-based hemoglobin level prediction using an artificial neural network},
+  author={Hasan, Md Kamrul and Haque, Md Munirul and Adib, Riddhiman and Tumpa, Jannatul F and Begum, Azima and Love, Richard R and Kim, Young L and Sheikh, I Ahamed},
+  booktitle={AMIA Annual Symposium Proceedings},
+  volume={2018},
+  pages={535},
+  year={2018},
+  organization={American Medical Informatics Association},
+  abstract={Blood hemoglobin level (Hgb) measurement has a vital role in the diagnosis, evaluation, and management of numerous diseases. We describe the use of smartphone video imaging and an artificial neural network (ANN) system to estimate Hgb levels non-invasively. We recorded 10 second-300 frame fingertip videos using a smartphone in 75 adults. Red, green, and blue pixel intensities were estimated for each of 100 area blocks in each frame and the patterns across the 300 frames were described. ANN was then used to develop a model using the extracted video features to predict hemoglobin levels. In our study sample, with patients 20-56 years of age, and gold standard hemoglobin levels of 7.6 to 13.5 g/dL., we observed a 0.93 rank order of correlation between model and gold standard hemoglobin levels. Moreover, we identified specific regions of interest in the video images which reduced the required feature space.}
+}
+
+@inproceedings{roushan2019towards,
+  abbr={COMPSAC},
+  title={Towards Predicting Risky Behavior Among Veterans with PTSD by Analyzing Gesture Patterns},
+  author={Roushan, Tanvir and Adib, Riddhiman and Johnson, Nadiyah and George, Olawunmi and Hossain, Md Fitrat and Franco, Zeno and Hooyer, Katinka and Ahamed, Sheikh Iqbal},
+  booktitle={2019 IEEE 43rd Annual Computer Software and Applications Conference (COMPSAC)},
+  volume={1},
+  pages={690--695},
+  year={2019},
+  organization={IEEE},
+  abstract={Risky behavior including violence and aggression, self-injury, anger outburst, domestic violence along with self-injury, sexual abuse, rule-breaking, use of drugs and alcohol, suicide, etc. are alarming issues among US military veterans who return from combat zone deployment in Iraq and Afghanistan. Veterans are exposed to trauma in war zones which affect most of them with post-traumatic stress disorder (PTSD) or other mental health problems to some degree. Studies have shown that veterans have much higher rates of PTSD than civilians and are more likely to engage in risky behavior. One of the forms of displaying and engaging in risky behaviors is through gestures. We collaborated with veterans and social scientists to find the list of 13 gestures that are often used by veterans engaged in risky behaviors. In this research work, we have collected accelerometer data from subjects performing the gestures mentioned above and have tried to detect them using machine learning techniques. This paper describes identifying gesture clusters from the accelerometer coordinate data and development of a predictive model that can classify the gestures resulting in the prediction of risky behaviors among the veterans who suffer from PTSD.}
+}
+
+@inproceedings{adib2019analyzing,
+  abbr={COMPSAC},
+  title={Analyzing Happiness: Investigation on Happy Moments using a Bag-of-Words Approach and Related Ethical Discussions},
+  author={Adib, Riddhiman and Aldawod, Eyad and Lang, Nathan and Lasswell, Nina and Guha, Shion},
+  booktitle={2019 IEEE 43rd Annual Computer Software and Applications Conference (COMPSAC)},
+  volume={1},
+  pages={653--662},
+  year={2019},
+  organization={IEEE},
+  abstract={In this research paper, we analyzed what moments and activities make people happy, based on a collection of happy moments. We are focusing on specific happy moments from a collection of text responses that people have shared through the crowd-sourcing platform: Amazon Mechanical Turk (MTurk). Using crowd-sourcing to collect our data allows us to advance our understanding of the cause of happiness, by focusing on words and real human experiences. Workers of MTurk were asked to reflect on what makes them happy in a given period and share three specific moments in complete sentences. Through text-based analysis, we will look to see what other components have a role in making a specific event happy and further analyze how we can classify such words. Also, we dive deeper into specific subcategories of classifiers in an attempt to form insights about their happiness level based on specific factors. With the goal to extract features from the text in HappyDB, in this study we used the bag of words approach. Through doing so, our results were successful at predicting the happiness category, concerning both accuracy and context. Our models were able to accomplish the goal of understanding a happy moment and fit such a moment into one of the seven ground truth happiness categories we set at the beginning of this study. We finished the article with the ethical perspective of such research works and related social implications.}
+}
+
+@article{lerret2020pilot,
+  abbr={Res. Nurs. Health},
+  title={Pilot study protocol of a mHealth self-management intervention for family members of pediatric transplant recipients},
+  author={Lerret, Stacee M and White-Traut, Rosemary and Medoff-Cooper, Barbara and Simpson, Pippa and Adib, Riddhiman and Ahamed, Sheikh Iqbal and Schiffman, Rachel},
+  journal={Research in Nursing & Health},
+  year={2020},
+  publisher={Wiley Online Library},
+  abstract={Solid‐organ transplantation is the treatment of choice for end‐stage organ failure. Parents of pediatric transplant recipients who reported a lack of readiness for discharge had more difficulty coping and managing their child's medically complex care at home. In this paper, we describe the protocol for the pilot study of a mHealth intervention (myFAMI). The myFAMI intervention is based on the Individual and Family Self‐Management Theory and focuses on family self‐management of pediatric transplant recipients at home. The purpose of the pilot study is to test the feasibility of the myFAMI intervention with family members of pediatric transplant recipients and to test the preliminary efficacy on postdischarge coping through a randomized controlled trial. The sample will include 40 family units, 20 in each arm of the study, from three pediatric transplant centers in the United States. Results from this study may advance nursing science by providing insight for the use of mHealth to facilitate patient/family–nurse communication and family self‐management behaviors for family members of pediatric transplant recipients.}
+}
+
+@article{lerret2020using,
+  abbr={J. Pediatr. Nurs.},
+  title={Using the engaging parents in education for discharge (ePED) iPad application to improve parent discharge experience},
+  author={Lerret, Stacee M and Johnson, Norah L and Polfuss, Michele and Weiss, Marianne and Gralton, Karen and Klingbeil, Carol G and Gibson, Cori and Garnier-Villarreal, Mauricio and Ahamed, S Iqbal and Adib, Riddhiman and others},
+  journal={Journal of Pediatric Nursing},
+  volume={52},
+  pages={41--48},
+  year={2020},
+  publisher={Elsevier},
+  abstract={Purpose:The purpose of this study was to evaluate the use of the Engaging Parents in Education for Discharge (ePED) iPad application on parent experiences of hospital discharge teaching and care coordination. Hypotheses were: parents exposed to discharge teaching using ePED will have 1) higher quality of discharge teaching and 2) better care coordination than parents exposed to usual discharge teaching. The secondary purpose examined group differences in the discharge teaching, care coordination, and 30-day readmissions for parents of children with and without a chronic condition.Design/Methods:Using a quasi-experimental design, ePED was implemented on one inpatient unit (n = 211) and comparison group (n = 184) from a separate unit at a pediatric academic medical center. Patient experience outcome measures collected on day of discharge included Quality of Discharge Teaching Scale-Delivery (QDTS-D) and care coordination measured by Care Transition Measure (CTM). Thirty-day readmission was abstracted from records.Results:Parents taught using ePED reported higher QDTS-D scores than parents without ePED (p = .002). No differences in CTM were found between groups. Correlations between QDTS-D and CTM were small for ePED (r = 0.14, p 0.03) and non-ePED (r = 0.29, p < .001) parent groups. CTM was weakly associated with 30-day readmissions in the ePED group.Conclusion:The use of ePED by the discharging nurse enhances parent-reported quality of discharge teaching.Practice implications:The ePED app is a theory-based structured conversation guide to engage parents in discharge preparation. Nursing implementation of ePED contributes to optimizing the patient/family healthcare experience.}
+}
+
+@article{johnson2020engaging,
+  abbr={J. Pediatr. Nurs.},
+  title={Engaging parents in education for discharge (ePED): Evaluating the reach, adoption \& implementation of an innovative discharge teaching method},
+  author={Johnson, Norah L and Lerret, Stacee and Klingbeil, Carol G and Polfuss, Michele and Gibson, Cori and Gralton, Karen and Garnier-Villarreal, Mauricio and Ahamed, S Iqbal and Riddhiman, Adib and Unteutsch, Rachel and others},
+  journal={Journal of Pediatric Nursing},
+  volume={54},
+  pages={42--49},
+  year={2020},
+  publisher={Elsevier},
+  abstract={Purpose: This paper describes the evaluation of the implementation of an innovative teaching method, the “Engaging Parents in Education for Discharge” (ePED) iPad application (app), at a pediatric hospital. Design and methods: Results: The Reach of the ePED was 245 of 1015 (24.2%) patient discharges. The Adoption rate was 211 of 245 (86%) patients discharged in the five months' study period. High levels of fidelity (89.3%) to Implementation of the ePED were attained: the Signs and Symptoms domain had the highest (93%) and Thinking Forward about Family Adjustment screen had the lowest fidelity (83.3%). Nurse themes explained implementation fidelity: “It takes longer”, and “Forgot to do it.” Conclusions: The ePED app operationalized how to have an engaging structured discharge conversation with parents. While the Reach of the ePED app was low under the study conditions, the adoption rate was positive. Nurses were able to integrate a theory-driven practice change into their daily routine when using the ePED app. Implications for practice: The rates of adoption and implementation fidelity support the feasibility of future hospital wide implementation to improve patient and family healthcare experience. Attention to training of new content and the interactive conversation approach will be needed to fully leverage the value of the ePED app. Future studies are needed to evaluate the maintenance of the ePED app.}
+}
+
+@inproceedings{adib2020causally,
+  abbr={PMLR},
+  title={A Causally Formulated Hazard Ratio Estimation through Backdoor Adjustment on Structural Causal Model},
+  author={Adib, Riddhiman and Griffin, Paul and Ahamed, Sheikh Iqbal and Adibuzzaman, Mohammad},
+  booktitle={Machine Learning for Healthcare Conference},
+  pages={376--396},
+  year={2020},
+  organization={PMLR},
+  abstract={Identifying causal relationships for a treatment intervention is a fundamental problem in health sciences. Randomized controlled trials (RCTs) are considered the gold standard for identifying causal relationships.  However, recent advancements in the theory of causal inference based on the foundations of structural causal models (SCMs) have allowed the identification of causal relationships from observational data, under certain assumptions. Survival analysis provides standard measures, such as the hazard ratio, to quantify the effects of an intervention. While hazard ratios are widely used in clinical and epidemiological studies for RCTs, a principled approach does not exist to compute hazard ratios for observational studies with SCMs. In this work, we review existing approaches to compute hazard ratios as well as their causal interpretation, if it exists. We also propose a novel approach to compute hazard ratios from observational studies using backdoor adjustment through SCMs and do-calculus. Finally, we evaluate the approach using experimental data for Ewing’s sarcoma.},
   selected={true}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{johnson2021one,
+  abbr={ West. J. Nurs. Res},
+  title={One Size Does Not Fit All: Discharge Teaching and Child Challenging Behaviors},
+  author={Johnson, Norah L and Lerret, Stacee and Polfuss, Michele and Gralton, Karen and Gibson, Cori and Ahamed, Sheikh I and Adib, Riddhiman and White-Traut, Rosemary and Brown, Roger L and Sawin, Kathleen J},
+  journal={Western Journal of Nursing Research},
+  pages={01939459211018829},
+  year={2021},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA},
+  abstract={This study compares quality of discharge teaching and care coordination for parents of children with challenging behaviors participating in a nursing implementation project, which used an interactive iPad application, to usual discharge care. Unlike parents  in  the  larger  quasi-experimental  longitudinal  project,  parents  of  children  with  challenging  behaviors  receiving  the  discharge  teaching  application  (n  =  14)  reported  lower  mean  scores  on  the  quality  of  discharge  teaching  scale–delivery  subscale  (M = 8.2, SD=   3.1)  than  parents  receiving  usual  care  (n  =   11)  (M = 9.6, SD=   4.7)  and  lower  scores  on  the  Care  Transition  Measure  (M = 2.44, SD=   1.09)  than  parents  receiving  usual  care  (M = 3.02, SD=   0.37),  with  moderate  to  large  effects (0.554–0.775). The discharge teaching approach was less effective with this subset, suggesting other approaches might be considered for this group of parents. Further study with a larger sample specific to parents of children with challenging behaviors is needed to assess their unique needs and to optimize their discharge experience.}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{lerret2021feasibility,
+  abbr={ West. J. Nurs. Res},
+  title={Feasibility and Acceptability of a mHealth Self-Management Intervention for Pediatric Transplant Families},
+  author={Lerret, Stacee M and Schiffman, Rachel and White-Traut, Rosemary and Medoff-Cooper, Barbara and Ahamed, Sheikh Iqbal and Adib, Riddhiman and Liegl, Melodee and Alonso, Estella and Mavis, Alisha and Jensen, Kyle and others},
+  journal={Western Journal of Nursing Research},
+  pages={01939459211024656},
+  year={2021},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA},
+  abstract={Families of pediatric solid organ transplant recipients need ongoing education and support in the first 30 days following hospital discharge for the transplantation. The purpose of this report is to describe the feasibility, acceptability, and preliminary efficacy of a mHealth family-self management intervention, (myFAMI), designed to improve post-discharge outcomes of coping, family quality of life, self-efficacy, family self-management, and utilization of health care resources. We enrolled 46 primary family members. myFAMI was feasible and acceptable; 81% (n=17/21) of family members completed the app at least 24/30 days (goal 80% completion rate). Family members generated 134 trigger alerts and received a nurse response within the goal timeframe of < 2 h 99% of the time. Although there were no significant differences between groups, primary outcomes were in the expected direction. The intervention was well received and is feasible for future post-discharge interventions for families of children who receive an organ transplant.}
 }
