added new papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -106,13 +106,14 @@
   selected={true}
 }
 
-@article{johnson2021one,
-  abbr={ West. J. Nurs. Res},
+@article{johnson2022one,
   title={One Size Does Not Fit All: Discharge Teaching and Child Challenging Behaviors},
-  author={Johnson, Norah L and Lerret, Stacee and Polfuss, Michele and Gralton, Karen and Gibson, Cori and Ahamed, Sheikh I and Adib, Riddhiman and White-Traut, Rosemary and Brown, Roger L and Sawin, Kathleen J},
+  author={Johnson, Norah L and Lerret, Stacee and Polfuss, Michele and Gralton, Karen and Gibson, Cori and Ahamed, Sheikh I and Riddhiman, Adib and White-Traut, Rosemary and Brown, Roger L and Sawin, Kathleen J},
   journal={Western Journal of Nursing Research},
-  pages={01939459211018829},
-  year={2021},
+  volume={44},
+  number={9},
+  pages={863--873},
+  year={2022},
   publisher={SAGE Publications Sage CA: Los Angeles, CA},
   abstract={This study compares quality of discharge teaching and care coordination for parents of children with challenging behaviors participating in a nursing implementation project, which used an interactive iPad application, to usual discharge care. Unlike parents  in  the  larger  quasi-experimental  longitudinal  project,  parents  of  children  with  challenging  behaviors  receiving  the  discharge  teaching  application  (n  =  14)  reported  lower  mean  scores  on  the  quality  of  discharge  teaching  scale–delivery  subscale  (M = 8.2, SD=   3.1)  than  parents  receiving  usual  care  (n  =   11)  (M = 9.6, SD=   4.7)  and  lower  scores  on  the  Care  Transition  Measure  (M = 2.44, SD=   1.09)  than  parents  receiving  usual  care  (M = 3.02, SD=   0.37),  with  moderate  to  large  effects (0.554–0.775). The discharge teaching approach was less effective with this subset, suggesting other approaches might be considered for this group of parents. Further study with a larger sample specific to parents of children with challenging behaviors is needed to assess their unique needs and to optimize their discharge experience.}
 }
@@ -126,4 +127,26 @@
   year={2021},
   publisher={SAGE Publications Sage CA: Los Angeles, CA},
   abstract={Families of pediatric solid organ transplant recipients need ongoing education and support in the first 30 days following hospital discharge for the transplantation. The purpose of this report is to describe the feasibility, acceptability, and preliminary efficacy of a mHealth family-self management intervention, (myFAMI), designed to improve post-discharge outcomes of coping, family quality of life, self-efficacy, family self-management, and utilization of health care resources. We enrolled 46 primary family members. myFAMI was feasible and acceptable; 81% (n=17/21) of family members completed the app at least 24/30 days (goal 80% completion rate). Family members generated 134 trigger alerts and received a nurse response within the goal timeframe of < 2 h 99% of the time. Although there were no significant differences between groups, primary outcomes were in the expected direction. The intervention was well received and is feasible for future post-discharge interventions for families of children who receive an organ transplant.}
+}
+
+@inproceedings{tumpa2022mtocs,
+  title={mTOCS: Mobile Teleophthalmology in Community Settings to improve Eye-health in Diabetic Population},
+  author={Tumpa, Jannatul Ferdause and Adib, Riddhiman and Das, Dipranjan and Abenoza, Nathalie and Zolot, Andrew and Medic, Velinka and Kimt, Judy and Romant, Jay and Ahamed, Sheikh Iqbal},
+  booktitle={2022 IEEE 46th Annual Computers, Software, and Applications Conference (COMPSAC)},
+  pages={100--109},
+  year={2022},
+  organization={IEEE},
+  abstract={Diabetic eye diseases, particularly Diabetic Retinopathy, is the leading cause of vision loss worldwide and can be prevented by early diagnosis through annual eye-screenings. However, cost, health care disparities, cultural limitations, etc. are the main barriers against regular screening. Eye-screenings conducted in community events with native-speaking staffs can facilitate regular check-up and development of awareness among underprivileged communities compared to traditional clinical settings. However, there are not sufficient technology support for carrying out the screenings in community settings with collaboration from community partners using native languages. In this paper, we have proposed and discussed the development of our software framework, “Mobile Teleophthalmology in Community Settings (mTOCS)”, that connects the community partners with eye-specialists and the Health Department staffs of respective cities to expedite this screening process. Moreover, we have presented the analysis from our study on the acceptance of community-based screening methods among the community participants as well as on the effectiveness of mTOCS among the community partners. The results have evinced that mTOCS has been capable of providing an improved rate of eye-screenings and better health outcomes.}
+}
+
+@article{adib2022mhealth,
+  title={An mHealth App-Based Self-management Intervention for Family Members of Pediatric Transplant Recipients (myFAMI): Framework Design and Development Study},
+  author={Adib, Riddhiman and Das, Dipranjan and Ahamed, Sheikh Iqbal and Lerret, Stacee Marie and others},
+  journal={JMIR nursing},
+  volume={5},
+  number={1},
+  pages={e32785},
+  year={2022},
+  publisher={JMIR Publications Inc., Toronto, Canada},
+  abstract={Background: Solid-organ transplantation is the treatment of choice for children with end-stage organ failure. Ongoing recovery and medical management at home after transplant are important for recovery and transition to daily life. Smartphones are widely used and hold the potential for aiding in the establishment of mobile health (mHealth) protocols. Health care providers, nurses, and computer scientists collaboratively designed and developed mHealth family self-management intervention (myFAMI), a smartphone-based intervention app to promote a family self-management intervention for pediatric transplant patients’ families. Objective: This paper presents outcomes of the design stages and development actions of the myFAMI app framework, along with key challenges, limitations, and strengths. Methods: The myFAMI app framework is built upon a theory-based intervention for pediatric transplant patients, with aid from the action research (AR) methodology. Based on initially defined design motivation, the team of researchers collaboratively explored 4 research stages (research discussions, feedback and motivations, alpha testing, and deployment and release improvements) and developed features required for successful inauguration of the app in the real-world setting. Results: Deriving from app users and their functionalities, the myFAMI app framework is built with 2 primary components: the web app (for nurses’ and superadmin usage) and the smartphone app (for participant/family member usage). The web app stores survey responses and triggers alerts to nurses, when required, based on the family members’ response. The smartphone app presents the notifications sent from the server to the participants and captures survey responses. Both the web app and the smartphone app were built upon industry-standard software development frameworks and demonstrate great performance when deployed and used by study participants. Conclusions: The paper summarizes a successful and efficient mHealth app-building process using a theory-based intervention in nursing and the AR methodology in computer science. Focusing on factors to improve efficiency enabled easy navigation of the app and collection of data. This work lays the foundation for researchers to carefully integrate necessary information (from the literature or experienced clinicians) to provide a robust and efficient solution and evaluate the acceptability, utility, and usability for similar studies in the future.}
 }
