updated missing papers on 2022

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -60,6 +60,27 @@
   abstract={In this research paper, we analyzed what moments and activities make people happy, based on a collection of happy moments. We are focusing on specific happy moments from a collection of text responses that people have shared through the crowd-sourcing platform: Amazon Mechanical Turk (MTurk). Using crowd-sourcing to collect our data allows us to advance our understanding of the cause of happiness, by focusing on words and real human experiences. Workers of MTurk were asked to reflect on what makes them happy in a given period and share three specific moments in complete sentences. Through text-based analysis, we will look to see what other components have a role in making a specific event happy and further analyze how we can classify such words. Also, we dive deeper into specific subcategories of classifiers in an attempt to form insights about their happiness level based on specific factors. With the goal to extract features from the text in HappyDB, in this study we used the bag of words approach. Through doing so, our results were successful at predicting the happiness category, concerning both accuracy and context. Our models were able to accomplish the goal of understanding a happy moment and fit such a moment into one of the seven ground truth happiness categories we set at the beginning of this study. We finished the article with the ethical perspective of such research works and related social implications.}
 }
 
+@inproceedings{tumpa2019mteh,
+  abbr={CHASE},
+  title={mTEH: A Decision Support System for Tele-Ophthalmology to Improve Eye Health of Wisconsin Population in Community Settings},
+  author={Tumpa, Jannatul F and Adib, Riddhiman and Das, Dipranjan and Ahamed, Sheikh I and Kim, Judy and Medic, Velinka and Castro, Al and Pacheco, Mirtha and Rowland, Rebecca and Romant, Jay},
+  booktitle={2019 IEEE/ACM International Conference on Connected Health: Applications, Systems and Engineering Technologies (CHASE)},
+  pages={25--26},
+  year={2019},
+  organization={IEEE},
+  abstract={mTEH (mobile Tele-Eye Health), a decision support system for teleophthalmology provides coordination among collaborators to conduct eye-screening events in community settings at southern Wisconsin with a mission to prevent vision loss as well as to educate people about diabetes and eye health. This system allows the collaborators to work in a time-efficient manner from remote locations and to manage data of the eye-screening participants securely.}
+}
+
+@inproceedings{tumpa2020community,
+  abbr={CSCW},
+  title={Community-based Retinal Screening with Multilingual Software Support to Overcome Language Barriers of Minority Communities},
+  author={Tumpa, Jannat and Adib, Riddhiman and Das, Dipranjan and Ahamed, Sheikh Iqbal and Abenoza, Nathalie and Zolot, Andrew and Medic, Velinka and Kim, Judy and Castro, Al and Pacheco, Mirtha Sosa and others},
+  booktitle={Conference Companion Publication of the 2020 on Computer Supported Cooperative Work and Social Computing},
+  pages={395--400},
+  year={2020},
+  abstract={Diabetic eye diseases, especially Diabetic Retinopathy, are the leading cause of vision loss worldwide and can be prevented by early diagnosis through annual retinal screening. Various socio-cultural factors, such as cost, healthcare disparities, cultural limitations, etc. are the foremost barriers against regular screening in minority communities. Retinal-screenings arranged in community settings with native-speaking staffs can facilitate regular check-ups and overcome language barriers of underprivileged communities compared to conventional clinical settings. As part of our study, we surveyed 400 participants to assess the acceptance of community-based screening methods among community participants. In addition to very positive responses about this screening approach’s diverse perspectives, we found that having native-speaking staff at screening events can help overcome language barriers. Moreover, integrating multilingual support in the electronic health record software to assist the native-speaking staff is a significant factor in designing such systems.}
+}
+
 @article{lerret2020pilot,
   abbr={Res. Nurs. Health},
   title={Pilot study protocol of a mHealth self-management intervention for family members of pediatric transplant recipients},
@@ -107,6 +128,7 @@
 }
 
 @article{johnson2022one,
+  abbr={West. J. Nurs. Res},
   title={One Size Does Not Fit All: Discharge Teaching and Child Challenging Behaviors},
   author={Johnson, Norah L and Lerret, Stacee and Polfuss, Michele and Gralton, Karen and Gibson, Cori and Ahamed, Sheikh I and Riddhiman, Adib and White-Traut, Rosemary and Brown, Roger L and Sawin, Kathleen J},
   journal={Western Journal of Nursing Research},
@@ -119,7 +141,7 @@
 }
 
 @article{lerret2021feasibility,
-  abbr={ West. J. Nurs. Res},
+  abbr={West. J. Nurs. Res},
   title={Feasibility and Acceptability of a mHealth Self-Management Intervention for Pediatric Transplant Families},
   author={Lerret, Stacee M and Schiffman, Rachel and White-Traut, Rosemary and Medoff-Cooper, Barbara and Ahamed, Sheikh Iqbal and Adib, Riddhiman and Liegl, Melodee and Alonso, Estella and Mavis, Alisha and Jensen, Kyle and others},
   journal={Western Journal of Nursing Research},
@@ -130,6 +152,7 @@
 }
 
 @inproceedings{tumpa2022mtocs,
+  abbr={COMPSAC},
   title={mTOCS: Mobile Teleophthalmology in Community Settings to improve Eye-health in Diabetic Population},
   author={Tumpa, Jannatul Ferdause and Adib, Riddhiman and Das, Dipranjan and Abenoza, Nathalie and Zolot, Andrew and Medic, Velinka and Kimt, Judy and Romant, Jay and Ahamed, Sheikh Iqbal},
   booktitle={2022 IEEE 46th Annual Computers, Software, and Applications Conference (COMPSAC)},
@@ -140,6 +163,7 @@
 }
 
 @article{adib2022mhealth,
+  abbr={JMIR},
   title={An mHealth App-Based Self-management Intervention for Family Members of Pediatric Transplant Recipients (myFAMI): Framework Design and Development Study},
   author={Adib, Riddhiman and Das, Dipranjan and Ahamed, Sheikh Iqbal and Lerret, Stacee Marie and others},
   journal={JMIR nursing},
